<resources>
    <string name="app_name">FragListApp</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="task_update">Task Update</string>
    <string name="add">ADD ITEM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_editview">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="placeholder_date">00/00/00</string>
    <string name="btn_save">Save</string>

    <string-array name="category_array">
        <item>Personal</item>
        <item>Work</item>
        <item>Fun</item>
        <item>Errand</item>
        <item>Miscellaneous</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done_by_deadline">Done By Deadline</string>
    <string name="done_after_deadline">Done After Deadline</string>
    <string name="past_due">Past Due</string>
    <string name="to_be_done">To Be Done</string>
    <string name="total_tasks">Total Tasks</string>
//    <string name="completed_tasks1">Completed task</string>
    //    <string name="current_tasks1">Current task</string>
    <string name="cancel">Cancel</string>

</resources>
